--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -1519,8 +1518,17 @@
                     android:onClick="onClick"
                     android:text=""
                     android:textColor="@color/app_light_black"
-                    android:textSize="24sp"
+                    android:textSize="20sp"
                     app:fontName="oswald_regular.ttf" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/view_profile"
+                    android:textColor="@color/app_red"
+                    android:textSize="13sp"
+                    app:fontName="oswald.ttf" />
             </LinearLayout>
 
             <com.mycity4kids.widget.CustomFontTextView
