--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_author_listing.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_author_listing.xml
@@ -13,6 +13,7 @@
         android:text="@string/search.author_label"
         android:textColor="@color/search.author_label"
         android:textSize="15sp"
+        android:visibility="gone"
         app:fontName="oswald_regular.ttf" />
 
     <ListView
