--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_grid_item_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_grid_item_layout.xml
@@ -15,19 +15,35 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center">
 
+        <!--<com.lid.lib.LabelImageView-->
+        <!--android:id="@+id/groupImageView"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="110dp"-->
+        <!--android:scaleType="centerCrop"-->
+        <!--android:src="@drawable/default_article"-->
+        <!--app:label_backgroundColor="#C2185B"-->
+        <!--app:label_orientation="LEFT_TOP"-->
+        <!--app:label_text="@string/new_label" />-->
 
         <ImageView
             android:id="@+id/groupImageView"
             android:layout_width="wrap_content"
             android:layout_height="110dp"
-            android:scaleType="center"
+            android:scaleType="fitXY"
             android:src="@drawable/default_article" />
 
-
-        <View
-            android:layout_width="wrap_content"
+        <com.lid.lib.LabelImageView
+            android:id="@+id/groupNewLabelImageView"
+            android:layout_width="match_parent"
             android:layout_height="110dp"
-            android:background="@color/explore_listing.topics.layer" />
+            android:background="@color/explore_listing.topics.layer"
+            android:scaleType="fitXY"
+            app:label_backgroundColor="@color/app_red"
+            app:label_distance="20dp"
+            app:label_orientation="LEFT_TOP"
+            app:label_strokeColor="@color/app_red"
+            app:label_text="@string/new_label"
+            app:label_textSize="12sp" />
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/groupNameTextView"
