--- a/MyCity4Kids/MyCity4Kids/res/layout/public_profile_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/public_profile_activity.xml
@@ -194,7 +194,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="@string/myprofile.followers_label"
+                    android:text="@string/blogger_profile.view_count_label"
                     android:textColor="@color/app_grey"
                     android:textSize="12sp"
                     app:fontName="oswald.ttf" />
@@ -227,7 +227,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="@string/myprofile.following_label"
+                    android:text="@string/blogger_profile.article_count_label"
                     android:textColor="@color/app_grey"
                     android:textSize="12sp"
                     app:fontName="oswald.ttf" />
