--- a/MyCity4Kids/MyCity4Kids/res/drawable/custom_reviewrating_bar.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/custom_reviewrating_bar.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+android:id/background"
-        android:drawable="@drawable/custom_reviewratingbar_empty"/>
+        android:id="@+id/background"
+        android:drawable="@drawable/custom_reviewratingbar_empty" />
     <item
-        android:id="@+android:id/secondaryProgress"
-        android:drawable="@drawable/custom_reviewratingbar_empty"/>
+        android:id="@+id/secondaryProgress"
+        android:drawable="@drawable/custom_reviewratingbar_empty" />
     <item
-        android:id="@+android:id/progress"
-        android:drawable="@drawable/custom_reviewratingbar_filled"/>
+        android:id="@+id/progress"
+        android:drawable="@drawable/custom_reviewratingbar_filled" />
 
 </layer-list>
