--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_trimmer.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_trimmer.xml
@@ -1,4 +1,4 @@
-<life.knowledge4.videotrimmer.K4LVideoTrimmer xmlns:android="http://schemas.android.com/apk/res/android"
+<com.mycity4kids.videotrimmer.K4LVideoTrimmer xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/timeLine"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
