--- a/MyCity4Kids/MyCity4Kids/res/layout/related_articles_item_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/related_articles_item_layout.xml
@@ -17,8 +17,9 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@id/articleImageView"
+        android:ellipsize="end"
         android:gravity="left"
-        android:maxLines="3"
+        android:maxLines="2"
         android:paddingLeft="12dp"
         android:paddingTop="4dp"
         android:text=""
