--- a/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
@@ -37,8 +37,8 @@
     <LinearLayout
         android:id="@+id/tabContainer"
         android:layout_width="match_parent"
-        android:layout_below="@+id/toolbar"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
