--- a/MyCity4Kids/MyCity4Kids/res/layout/video_carousel_container.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/video_carousel_container.xml
@@ -82,7 +82,7 @@
                                 android:layout_centerHorizontal="true"
                                 android:layout_marginTop="60dp"
                                 android:src="@drawable/ic_videos"
-                                android:visibility="invisible" />
+                                android:visibility="visible" />
 
                             <com.mycity4kids.widget.CustomFontTextView
                                 android:id="@+id/txvAuthorName1"
@@ -256,7 +256,7 @@
                                 android:layout_centerHorizontal="true"
                                 android:layout_marginTop="60dp"
                                 android:src="@drawable/ic_videos"
-                                android:visibility="invisible" />
+                                android:visibility="visible" />
 
                             <com.mycity4kids.widget.CustomFontTextView
                                 android:id="@+id/txvAuthorName2"
@@ -430,7 +430,7 @@
                                 android:layout_centerHorizontal="true"
                                 android:layout_marginTop="60dp"
                                 android:src="@drawable/ic_videos"
-                                android:visibility="invisible" />
+                                android:visibility="visible" />
 
                             <com.mycity4kids.widget.CustomFontTextView
                                 android:id="@+id/txvAuthorName3"
@@ -604,7 +604,7 @@
                                 android:layout_centerHorizontal="true"
                                 android:layout_marginTop="60dp"
                                 android:src="@drawable/ic_videos"
-                                android:visibility="invisible" />
+                                android:visibility="visible" />
 
                             <com.mycity4kids.widget.CustomFontTextView
                                 android:id="@+id/txvAuthorName4"
@@ -778,7 +778,7 @@
                                 android:layout_centerHorizontal="true"
                                 android:layout_marginTop="60dp"
                                 android:src="@drawable/ic_videos"
-                                android:visibility="invisible" />
+                                android:visibility="visible" />
 
                             <com.mycity4kids.widget.CustomFontTextView
                                 android:id="@+id/txvAuthorName5"
@@ -955,7 +955,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="60dp"
                         android:src="@drawable/ic_videos"
-                        android:visibility="invisible" />
+                        android:visibility="visible" />
 
                     <com.mycity4kids.widget.CustomFontTextView
                         android:id="@+id/txvAuthorName"
