--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -7,6 +7,7 @@
     <color name="app_blue">#507cbe</color>
     <color name="app_pink">#FF4081</color>
     <color name="app_red">#D54058</color>
+    <color name="app_cyan">#39B47E</color>
     <color name="app_trans_red">#D54058</color>
     <color name="sign_in_out_text_red_color">#FF9BA8</color>
     <color name="app_nav_bg">#f4eded</color>
